# melon

./: .clang-format  .gitignore  CMakeLists.txt  CMakeUserPresets.json  MakeW64.bat  Makefile  README.md  conanfile.py  conanfile.txt  h
.github/workflows/: c-cpp.yml  edit_conan_profile.py  gcc14_c++23  gcc15_c++26  mingw15_c++26  test
cmake/: CMakeBuildTypeUtils.cmake  CompilerWarnings.cmake  Conan.cmake  FindCOIN.cmake  FindGUROBI.cmake  FindSCIP.cmake
docs/: CONCEPTS.md
include/: melon.hpp
include/melon/: a_star.hpp  all.hpp  arc_list_builder.hpp  bfs.hpp  binary_heap copy.hpp  binary_heap.hpp  d_ary_heap.hpp  dfs.hpp  dijkstra.hpp  dijkstra_semirings.hpp  fast_binary_heap.hpp  graph.hpp  it_binary_heap.hpp  map_view.hpp  mapping.hpp  mutable_digraph.hpp  mutable_forward_weighted_digraph.hpp  mutable_forward_weighted_graph.hpp  mutable_graph.hpp  mutable_weighted_digraph.hpp  my_stl_heap.hpp  node_search_behavior.hpp  old_binary_heap.hpp  planar_graph.hpp  planar_map.hpp  static_digraph.hpp  static_digraph_builder.hpp  static_forward_digraph.hpp  static_forward_weighted_digraph.hpp  static_graph.hpp  static_map.hpp  static_map_atomic_bool.hpp  static_map_bool.hpp  undirected_graph.hpp  weighted_static_forward_digraph.hpp  wip_planar_graph.hpp  wip_planar_map.hpp
include/melon/adaptor/: line.hpp  reverse copy.hpp  reverse.hpp  wip_line.hpp  wip_snapshot.hpp  wip_subgraph.hpp
include/melon/algorithm/: a_star.hpp  bentley_ottmann.hpp  bfs.hpp  bidirectional_dijkstra.hpp  biobjective_dijkstra.hpp  breadth_first_search.hpp  competing_dijkstras.hpp  concurrent_dijkstras.hpp  connected_components.hpp  depth_first_search.hpp  dfs.hpp  dijkstra copy.hpp  dijkstra.hpp  dijkstra_semirings.hpp  dinitz.hpp  edmonds_karp.hpp  knapsack_bnb.hpp  kruskal.hpp  network_voronoi.hpp  robust_fiber.hpp  strong_fiber.hpp  strongly_connected_components.hpp  topological_sort.hpp  traversal_forest.hpp  unbounded_knapsack_bnb.hpp  wip_dinitz.hpp
include/melon/concepts/: graph.hpp  graph_concepts.hpp  graph_free_functions.hpp  id_value_map.hpp  key_value_map.hpp  map_of.hpp  priority_queue.hpp  range_of.hpp  semiring.hpp  traversal.hpp  wip_graph.hpp  wip_graph_free_fucntions.hpp
include/melon/concepts/detail/: range_of.hpp
include/melon/container/: d_ary_heap.hpp  disjoint_sets.hpp  mutable_digraph.hpp  static_digraph.hpp  static_filter_map.hpp  static_forward_digraph.hpp  static_map.hpp  static_map_bool.hpp  wip_static_map_atomic_bool.hpp  wip_union_find.hpp
include/melon/data_structures/: d_ary_heap copy.hpp  d_ary_heap.hpp  fast_binary_heap.hpp  map_view.hpp  static_map.hpp  static_map_atomic_bool.hpp  static_map_bool.hpp  wip_union_find.hpp
include/melon/detail/: concat_view.hpp  constexpr_ternary.hpp  consumable_range.hpp  consumable_view.hpp  intrusive_iterator_base.hpp  intrusive_view.hpp  map_if.hpp  prefetch.hpp  range-v3_compatibility.hpp  range_of.hpp  specialization_of.hpp
include/melon/expected_cpp23/: generator.hpp
include/melon/experimental/: bentley_ottmann.hpp  bignum  doubly_connected_digraph.hpp  dual.hpp  planar_map.hpp  scapegoat_tree.hpp
include/melon/future_std/: generator.hpp
include/melon/utility/: algorithmic_generator.hpp  alias_method_sampler.hpp  bounded_value.hpp  erdos_renyi.hpp  geometry.hpp  graphviz_printer.hpp  priority_queue.hpp  rational.hpp  semiring.hpp  static_digraph_builder.hpp  traversal.hpp  traversal_iterator.hpp  value_map.hpp
include/melon/utils/: constexpr_ternary.hpp  generator.hpp  intrusive_forward_view.hpp  intrusive_input_range.hpp  intrusive_view.hpp  map_view.hpp  node_search_span.hpp  prefetch.hpp  semirings.hpp  traversal_algorithm_behavior.hpp  traversal_algorithm_iterator.hpp  traversal_iterator.hpp
include/melon/views/: complete_digraph.hpp  dual.hpp  graph_view.hpp  reverse.hpp  subgraph.hpp  undirect.hpp  undirected_graph_view.hpp  wip_dual.hpp  wip_subgraph.hpp
include/melon/wip/: graph.hpp
misc/: logomelon.blend  logomelon.blend1  melon_128.xcf  melon_title.xcf
single-header/: melon.hpp
test/: CMakeLists.txt  alias_method_sampler.cpp  arc_list_builder_test.cpp  bentley_ottmann.cpp  bentley_ottmann_test.cpp  bidirectional_dijkstra.cpp  bidirectional_dijkstra_test.cpp  biobjective_dijkstra.cpp  bounded_value.cpp  bounded_value_test.cpp  breadth_first_search.cpp  breadth_first_search_test.cpp  competing_dijkstras.cpp  competing_dijkstras_test.cpp  complete_digraph.cpp  complete_digraph_test.cpp  conanfile.py  concat_view_fallback.cpp  concurrent_dijkstras_test.cpp  connected_components.cpp  consumable_view.cpp  consumable_view_test.cpp  cpo.cpp  cpo_test.cpp  d_ary_heap.cpp  d_ary_heap_test.cpp  depth_first_search.cpp  depth_first_search_test.cpp  dijkstra.cpp  dijkstra_test.cpp  dinitz.cpp  dinitz_test.cpp  disjoint_sets.cpp  dumb_digraph.cpp  dumb_digraph.hpp  dumb_digraph_test.cpp  edmonds_karp.cpp  edmonds_karp_test.cpp  erdos_renyi.cpp  erdos_renyi_test.cpp  (+53 more)
